fix: timezone issue, set as always UTC

--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^8.0.1"
+  },
+  "dependencies": {
+    "moment-timezone": "^0.5.31"
   }
 }
